Slight amendments fixed some behind the scenes bits for making smart header more efficient

--- a/sass/project/page_setup.scss
+++ b/sass/project/page_setup.scss
@@ -1,13 +1,16 @@
 /* EDIT THIS PAGE FOR INDIVIDUAL PROJECT SETUP */
 
-
-$setup_logo: url("../images/logo2.png");			  		//Set the logo image to a file logo.png in images folder
+//QUICKIES
+$use_logo:true;
 $setup_background: gold; 					  	  			//set background to red
-$setup_font: arial;   					 		  			//set font to arial
+$setup_font: arial;   
+$logo_width: 200px;
+$logo_height: 200px;					 		  			//set font to arial
 
 //SETUP OPTIONS
-	$logo_height:200px;
-	$logo_width:200px;
+	
+	//SETUP LOGO
+	$setup_logo: url("../images/logo2.png");			  		//Set the logo image to a file logo.png in images folder
 	$logo_size: 240%;
 	$logo_pos_x: -140px;
 	$logo_pos_y: -30px;
@@ -15,9 +18,12 @@ $setup_font: arial;   					 		  			//set font to arial
 	$page_maxWidth:1170px;
 	$header_textSize:60px;
 
-//OVERRIDES
-	//HEADER	
-	@include define_Logo($logo_height,$logo_width,"",$logo_size,$logo_pos_x,$logo_pos_y);
+//OVERRIDES -- TODO, put these in a sub folder and use quickies to make changes
+	//HEADER
+	@if($use_logo == true)
+	{
+		@include define_Logo($logo_height,$logo_width,"",$logo_size,$logo_pos_x,$logo_pos_y);
+	}
 	@include define_header_text(auto, auto, $header_textSize, inherit);	
 	@include vAlign_header;	 								// sass/lib/calc/centerV.scss, sass/lib/objects/primary/header
 	@include hAlign_header;					 				// sass/lib/calc/centerH.scss, sass/lib/objects/primary/header
